Update das coisas da parte WEB

--- a/GraoParaMVN/GraoParaWEB/WebContent/cadastroDocumentos.html
+++ b/GraoParaMVN/GraoParaWEB/WebContent/cadastroDocumentos.html
@@ -17,7 +17,7 @@ function Formatadata(Campo, teclapres)
 	vr = vr.replace("/", "");
 	vr = vr.replace("/", "");
 	tam = vr.length + 1;
-	if (tecla != 8 && tecla != 8)
+	if (tecla != 8)
 	{
 		if (tam > 0 && tam < 2)
 			Campo.value = vr.substr(0, 2) ;
